Feature: ever failed for having independent on executable file so we need install JAVA_HOME to users computer